fix: print layout issue

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,10 @@
   @page {
     margin: 0.5cm;
   }
+  html, body, #app {
+    height: auto !important;
+    overflow: visible !important;
+  }
   body {
     background: white;
   }
